--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>首页</title>
+    <title>张洁的个人博客</title>
     <link rel="stylesheet" type="text/css" href="blogs/css/base.css">
 </head>
 <body>
