头部静态页面

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Bootstrap 101 Template</title>
-
+    <title>张洁的个人博客</title>
     <!-- Bootstrap -->
     <link href="blogs/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="blogs/css/base.css"/>
+    <link rel="stylesheet" href="blogs/css/index.css"/>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,10 +18,34 @@
     <![endif]-->
 </head>
 <body>
-<h1>你好，世界！</h1>
+<div class="container header">
+    <div class="row">
+        <div class="col-xs-12 headerLogo col-sm-12 col-md-6">
+            <img src="blogs/images/logo.png" alt=""/>
+        </div>
+        <div class=" col-md-6 headerWord">
+            <img src="blogs/images/logo-cup.png" alt=""/>
+            <p>时间是宝贵的，提高效率，就是节约时间。</p>
+            <p>闲下来时看看书，书本里的故事，总有你学到的人生。</p>
+
+        </div>
+
+    </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="blogs/js/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="blogs/lib/bootstrap/js/bootstrap.js"></script>
 </body>
