--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="col-xs-12 headerLogo col-sm-12 col-md-6">
             <img src="blogs/images/logo.png" alt=""/>
         </div>
-        <div class=" col-md-6 headerWord">
+        <div class=" col-md-6 hidden-xs headerWord">
             <img src="blogs/images/logo-cup.png" alt=""/>
             <p>时间是宝贵的，提高效率，就是节约时间。</p>
             <p>闲下来时看看书，书本里的故事，总有你学到的人生。</p>
