--- a/index.html
+++ b/index.html
@@ -18,21 +18,34 @@
     <![endif]-->
 </head>
 <body>
+<!--头部 start-->
 <div class="container header">
     <div class="row">
-        <div class="col-xs-12 headerLogo col-sm-12 col-md-6">
+        <div class="col-xs-12 col-sm-12 col-md-6 headerLogo ">
             <img src="blogs/images/logo.png" alt=""/>
         </div>
-        <div class=" col-md-6 hidden-xs headerWord">
+        <div class=" col-md-6 hidden-sm hidden-xs headerWord">
             <img src="blogs/images/logo-cup.png" alt=""/>
             <p>时间是宝贵的，提高效率，就是节约时间。</p>
             <p>闲下来时看看书，书本里的故事，总有你学到的人生。</p>
-
         </div>
-
     </div>
-
 </div>
+<!--头部 end-->
+<!--导航 start-->
+<div class="container navMarginTop10">
+    <div class="row">
+        <ul class="nav nav-pills">
+            <li  role="presentation" class=" col-xs-12 col-sm-2 col-md-2"><a href="#">首页</a></li>
+            <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="#">学习网站</a></li>
+            <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="#">框架实例</a></li>
+            <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="#">个人日记</a></li>
+            <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="#">关于张洁</a></li>
+            <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="#">留言板</a></li>
+        </ul>
+    </div>
+</div>
+<!--导航 end-->
 
 
 
