--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="张洁"/>
+    <meta name="description" content="张洁个人博客，记录学习成长的博客，关于前端技术的学习研究"/>
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>张洁的个人博客</title>
     <!-- Bootstrap -->
@@ -36,26 +38,19 @@
 <div class="container navMarginTop10">
     <div class="row">
         <ul class="nav nav-pills">
-            <li  role="presentation" class=" col-xs-12 col-sm-2 col-md-2"><a href="#">首页</a></li>
+            <li  role="presentation" class="active col-xs-12 col-sm-2 col-md-2"><a href="#">首页</a></li>
             <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="#">学习网站</a></li>
             <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="#">框架实例</a></li>
-            <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="#">个人日记</a></li>
+            <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="blogs/html/log/log.html">个人日记</a></li>
             <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="#">关于张洁</a></li>
             <li  role="presentation" class="col-xs-12 col-sm-2 col-md-2"><a href="#">留言板</a></li>
         </ul>
     </div>
 </div>
 <!--导航 end-->
+<!--轮播图 start-->
 
-
-
-
-
-
-
-
-
-
+<!--轮播图 end-->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="blogs/js/jquery.js"></script>
